--- a/induction.html
+++ b/induction.html
@@ -19,46 +19,49 @@
     <body>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-            <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
-                <ul class="navbar-nav ml-auto text-center">
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#office365">Office365</a></strong>
-                    </li>
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#onenote">OneNote</a></strong>
-                    </li>
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#teams">Teams</a></strong>
-                    </li>
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#onedrive">OneDrive</a></strong>
-                    </li>
-                </ul>
-            </div>
-            <div class="mx-auto my-2 order-0 order-md-1 position-relative">
-                <a class="mx-auto" href="#">
-                    <img src="dulwich.png" class="rounded-circle">
+                <a class="navbar-brand" href="#">
+                    <img src="dulwich.png" width="auto" height="50" alt="">
                 </a>
+                <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
+                    <ul class="navbar-nav ml-auto text-left">
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#office365">Office365</a></strong>
+                        </li>
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#onenote">OneNote</a></strong>
+                        </li>
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#teams">Teams</a></strong>
+                        </li>
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#onedrive">OneDrive</a></strong>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mx-auto my-2 order-0 order-md-1 position-relative">
+                    <a class="mx-auto" href="#">
+                        <img src="dulwich.png" class="rounded-circle">
+                    </a>
+                </div>
+                <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
+                    <ul class="navbar-nav mr-auto text-left">
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#myschool">MySchool</a></strong>
+                        </li>
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#sharepoint">Sharepoint</a></strong>
+                        </li>
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#websites">Websites</a></strong>
+                        </li>
+                        <li class="nav-item">
+                            <strong><a class="nav-link" href="#troubleshoot">Troubleshoot</a></strong>
+                        </li>
+                    </ul>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            </div>
-            <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
-                <ul class="navbar-nav mr-auto text-center">
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#myschool">MySchool</a></strong>
-                    </li>
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#sharepoint">Sharepoint</a></strong>
-                    </li>
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#websites">Websites</a></strong>
-                    </li>
-                    <li class="nav-item">
-                        <strong><a class="nav-link" href="#troubleshoot">Troubleshoot</a></strong>
-                    </li>
-                </ul>
-            </div>
             </nav>
         </div>
     
