--- a/induction.html
+++ b/induction.html
@@ -91,7 +91,7 @@
                     <hr>
                 </div>
                 <div id="onenote">
-                    <h2>Office 365</h2>
+                    <h2>Office 365 <a href="https://portal.office.com" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
                     <a href="induction/Outlook.mp4" target="_blank">Outlook</a><br>
                     <a href="induction/EmailEtiquette.mp4" target="_blank">Email Etiquette</a><br>
@@ -99,32 +99,36 @@
                     <hr>
                 </div>
                 <div id="teams">
-                    <h2>Onenote</h2>
+                    <h2>Onenote <a href="https://www.office.com/launch/onenote" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
                     <a href="induction/Access Onenote.mp4" target="_blank">Installation</a><br>
                     <a href="induction/OnenoteUsage.mp4" target="_blank">Basics</a><br>
                     <hr>
                 </div>
                 <div id="onedrive">
-                    <h2>Teams</h2>
+                    <h2>Teams <a href="https://teams.microsoft.com" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
                     <a href="induction/TeamsUsage.mp4" target="_blank">Basics</a><br>
                     <hr>
                 </div>
                 <div id="myschool">
-                    <h2>OneDrive</h2>
+                    <h2>OneDrive <a href="https://dulwichcollegebeijing-my.sharepoint.com" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
-                    <a href="induction/" target="_blank">Video name</a><br>
+                    <a href="induction/Introduction_To_OneDrive.mp4" target="_blank">Overview</a><br>
+                    <a href="induction/Sharing_Files.mp4" target="_blank">Sharing Files</a><br>
+                    <a href="induction/OneDrive_For_Desktop.mp4" target="_blank">OneDrive for Desktop</a><br>
+                    <a href="https://www.microsoft.com/en-us/microsoft-365/onedrive/download">OneDrive for Desktop download link</a>
                     <hr>
                 </div>
                 <div id="sharepoint">
-                    <h2>MySchool</h2>
+                    <h2>MySchool <a href="https://myschool.dulwich-beijing.cn/" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
-                    <a href="induction/" target="_blank">Video name</a><br>
+                    <a href="induction/MySchool_Intro.mkv" target="_blank">Overview</a><br>
+                    <a href="induction/MySchool_Courses.mkv" target="_blank">Important "Courses"/tabs</a><br>
                     <hr>
                 </div>
                 <div id="websites">
-                    <h2>Sharepoint</h2>
+                    <h2>Sharepoint <a href="https://dulwichcollegebeijing.sharepoint.com/_layouts/15/sharepoint.aspx" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
                     <a href="induction/" target="_blank">Video name</a><br>
                     <hr>
