--- a/induction.html
+++ b/induction.html
@@ -130,13 +130,13 @@
                 <div id="websites">
                     <h2>Sharepoint <a href="https://dulwichcollegebeijing.sharepoint.com/_layouts/15/sharepoint.aspx" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
-                    <a href="induction/" target="_blank">Video name</a><br>
+                    Video coming soon...please wait<br>
                     <hr>
                 </div>
                 <div id="troubleshoot">
                     <h2>Useful Websites/links</h2>
                     <hr>
-                    <a href="induction/" target="_blank">Video name</a><br>
+                    Video coming soon...please wait<br>
                     <hr>
                 </div>
                 <div id="troubleshoot">
