final push for induction

--- a/induction.html
+++ b/induction.html
@@ -123,26 +123,26 @@
                 <div id="sharepoint">
                     <h2>MySchool <a href="https://myschool.dulwich-beijing.cn/" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
-                    <a href="induction/MySchool_Intro.mkv" target="_blank">Overview</a><br>
-                    <a href="induction/MySchool_Courses.mkv" target="_blank">Important "Courses"/tabs</a><br>
+                    <a href="induction/MySchool_Intro.mp4" target="_blank">Overview</a><br>
+                    <a href="induction/MySchool_Courses.mp4" target="_blank">Important "Courses"/tabs</a><br>
                     <hr>
                 </div>
                 <div id="websites">
                     <h2>Sharepoint <a href="https://dulwichcollegebeijing.sharepoint.com/_layouts/15/sharepoint.aspx" target="_blank"><i class="fas fa-external-link-alt"></i></a></h2>
                     <hr>
-                    Video coming soon...please wait<br>
+                    <a href="induction/Sharepoint.mp4" target="_blank">Sharepoint</a><br>
                     <hr>
                 </div>
                 <div id="troubleshoot">
                     <h2>Useful Websites/links</h2>
                     <hr>
-                    Video coming soon...please wait<br>
+                    <a href="induction/thirdpartywebsites.mp4" target="_blank">Third-party websites</a><br>
                     <hr>
                 </div>
                 <div id="troubleshoot">
                     <h2>Troubleshooting</h2>
                     <hr>
-                    Audio troubleshooting: 
+                    Teams Audio troubleshooting: 
                     <ul>
                         <li>
                             Switch input/output devices in "Device Settings" and system preferences
@@ -167,6 +167,37 @@
                         </li>
                         <li>
                             Connect using browser version
+                        </li>
+                    </ul>
+                    Miscellanenous problems with MySchool
+                    <ul>
+                        <li>Missing timetable:</li>
+                            <ul>
+                                <li>Contact Mr. Kaye at the Data Office</li>
+                                <li>The data office is located opposite Ms. Edwards' office on the first floor.</li>
+                            </ul>
+                        <li>MySchool Assignment locked</li>
+                            <ul>
+                                <li>
+                                    Contact your teacher through Teams AND email
+                                </li>
+                            </ul>
+                        <li>Grades/reports not showing</li>
+                            <ul>
+                                <li>Wait until the end of the school day. It takes time for all the reports to be uploaded.</li>
+                                <li>If still not up by the end of the day, contact Mr. Kaye/data office</li>
+                            </ul>
+                    </ul>
+                    Unable to join Flipgrid
+                    <ul>
+                        <li>
+                            Check if you have the correct code
+                        </li>
+                        <li>
+                            Connect with a different device
+                        </li>
+                        <li>
+                            Ask your teacher to send the code again
                         </li>
                     </ul>
                     <hr>
