--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Robot Reveal-->
     <div id="block-robot-reveal">
         <div class="flex-robot-container">
-            <img class="weird-flex" src="./prime.png">
+            <img class="weird-flex" src="./img/robot_img/prime.png">
             <div class="but-ok">
                 <h2>Robot Reveal: Phoenix</h2>
                 <p>This robot, a labour of love from our programming and engineering teams, is a work of art. She can stretch, sit, spin, shift, smooth like silky pancake batter. In her free time, she loves playing ball and training with our drive team. She can move up to the second level of the HAB, place both balls and hatches onto the rockets, operate driver-controlled during the sandstorm period, and partially run by herself using complex, rPi-based vision systems</p>
@@ -118,17 +118,17 @@
 
     <div id="block-sponsors">
         <div class="flex-robot-container">
-            <a href="https://china.man-es.com/"><img class="mega-sponsor" src="./man.png"></a>
-            <a href=""><img class="mega-sponsor" src="./novavision.png"></a>
-            <a href=""><img class="mega-sponsor" src="./intronics.png"></a>
+            <a href="https://china.man-es.com/"><img class="mega-sponsor" src="./img/sponsors/man.png"></a>
+            <a href=""><img class="mega-sponsor" src="./img/sponsors/novavision.png"></a>
+            <a href=""><img class="mega-sponsor" src="./img/sponsors/intronics.png"></a>
         </div>
         <div class="flex-robot-container">
-            <a href="https://www.dulwich.org/news-and-events/300000-rmb-awarded-for-development-of-student-led-projects"><img class="sponsor" src="./pioneer.png"></a>
-            <a href="https://beijing.dulwich.org/"><img class="sponsor" src="./dulwich.png"></a>
-            <a href="https://www.dintaifung.com.tw/eng/index.php"><img class="sponsor" src="./dtf.png"></a>
-            <a href="https://beijing.dulwich.org/our-people/friends-of-dulwich"><img class="sponsor" src="./fod.png"></a>
-            <a href="https://beijing.dulwich.org/learning-at-dulwich/steam-se21"><img class="sponsor" src="./se21.png"></a>
-            <a href="https://www.guazi.com/bj/"><img class="sponsor" src="./guazi.png"></a>
+            <a href="https://www.dulwich.org/news-and-events/300000-rmb-awarded-for-development-of-student-led-projects"><img class="sponsor" src="./img/sponsors/pioneer.png"></a>
+            <a href="https://beijing.dulwich.org/"><img class="sponsor" src="./img/sponsors/dulwich.png"></a>
+            <a href="https://www.dintaifung.com.tw/eng/index.php"><img class="sponsor" src="./img/sponsors/dtf.png"></a>
+            <a href="https://beijing.dulwich.org/our-people/friends-of-dulwich"><img class="sponsor" src="./img/sponsors/fod.png"></a>
+            <a href="https://beijing.dulwich.org/learning-at-dulwich/steam-se21"><img class="sponsor" src="./img/sponsors/se21.png"></a>
+            <a href="https://www.guazi.com/bj/"><img class="sponsor" src="./img/sponsors/guazi.png"></a>
         </div>
     </div>
 </body>
