--- a/induction.html
+++ b/induction.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/induction.css">
-        <link rel="shortcut icon" href="dulwich.png">
+        <link rel="shortcut icon" href="./img/sponsors/dulwich.png">
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Raleway:wght@500&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/6f8f0bfacf.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light fixed-top">
                 <a class="navbar-brand" href="#">
-                    <img src="dulwich.png" width="auto" height="50" alt="">
+                    <img src="./img/sponsors/dulwich.png" width="auto" height="50" alt="">
                 </a>
                 <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
                     <ul class="navbar-nav ml-auto text-left">
@@ -40,7 +40,7 @@
                 </div>
                 <div class="mx-auto my-2 order-0 order-md-1 position-relative">
                     <a class="mx-auto" href="#">
-                        <img src="dulwich.png" class="rounded-circle">
+                        <img src="./img/sponsors/dulwich.png" class="rounded-circle">
                     </a>
                 </div>
                 <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
