--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="block-introduction">
         <div class="responsiveBlock">
             <h1 style="color: var(--white);">We are <span id="superEmph">Helion.</span></h1>
-            <p style="color: var(--whiteish);">Helion is a FIRST Robotics team founded in 2018, and is entirely
+            <p style="color: var(--whiteish);">Founded in 2018, Helion is a FIRST Robotics team entirely
                 composed of high school and middle school students. We are located at Dulwich College Beijing, and our
                 purpose is to successfully construct and program a competition robot that will compete in a FIRST
                 Robotics regional. Our belief is that not only will we develop as individuals in the different fields
